chore(navbar): fix dev console not showing entire page

--- a/assets/custom-css/components/_navbar.scss
+++ b/assets/custom-css/components/_navbar.scss
@@ -1,7 +1,7 @@
 .sgds{
     &.navbar{
         background-color: rgba(255,255,255, 0.8);
-        backdrop-filter: blur(10px);
+
         border-bottom: 1px solid rgba(var(--sgds-body-color-rgb),0.2);
         .navbar-nav{
             gap:1rem;
